--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -79,6 +79,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      image-tag: ${{ steps.set-image-tag.outputs.tag }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -101,11 +103,21 @@ jobs:
           echo "✅ 镜像推送成功！"
           echo "DEPLOY_IMAGE=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" >> $GITHUB_ENV
 
+      - name: Set image tag output
+        id: set-image-tag
+        run: |
+          echo "IMAGE_TAG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          echo "tag=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}" >> $GITHUB_OUTPUT
   deploy:
     name: Blue-Green Deployment
     runs-on: ubuntu-latest
     needs: build-and-push
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    # 从 build-and-push 作业获取输出
+    env:
+      DEPLOY_IMAGE: ${{ needs.build-and-push.outputs.image-tag }}
+      steps:
+       
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
