手动触发部署测试

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,36 +1,39 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
-  app:
-    build: .
-    container_name: web-calculator-app
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./logs:/app/logs
-    environment:
-      - FLASK_ENV=production
+  # 这个文件作为模板，实际部署时会生成特定颜色的版本
+  app_blue:
+    image: ${BLUE_TAG:-ghcr.io/wkk08/web-calculator-ci-cd:latest}
+    container_name: web-calculator-blue
     restart: unless-stopped
-    networks:
-      - web-network
+    ports:
+      - "8080:5000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  app_green:
+    image: ${GREEN_TAG:-ghcr.io/wkk08/web-calculator-ci-cd:latest}
+    container_name: web-calculator-green
+    restart: unless-stopped
+    ports:
+      - "8081:5000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   nginx:
     image: nginx:alpine
-    container_name: web-calculator-nginx
+    container_name: nginx-proxy
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./deploy/nginx/conf.d:/etc/nginx/conf.d
-      - ./deploy/nginx/default.conf:/etc/nginx/nginx.conf
-      - ./logs:/var/log/nginx
+      - ./nginx/conf.d:/etc/nginx/conf.d
     depends_on:
-      - app
-    restart: unless-stopped
-    networks:
-      - web-network
-
-networks:
-  web-network:
-    driver: bridge
+      - app_blue
+      - app_green
+    restart: always
